Fixes #5 Closes #5 Fixes #3 Closes #3 Fixes #1 Closes #1
Clean up code
Support custom events
Make options settable using HTML attributes
Differentiate methods in private and public

--- a/lib/components/freebase_searchwidget.html
+++ b/lib/components/freebase_searchwidget.html
@@ -3,8 +3,7 @@
 <body>
   <polymer-element name="freebase-searchwidget" attributes="options,value"> <!-- attributes="advanced exact filter key lang scoring spell flyout suggest_new css css_prefix show_id service_url service_path flyout_service_url flyout_service_path flyout_image_service_url flyout_image_service_path flyout_parent align status parent animate xhr_delay zIndex" -->
     <template>
-      <input id='inputElement' type="text"/>
-      <!--<span>{{options}}</span> --> <!-- TODO for debugging purposes - remove if fixed -->
+      <input id="inputElement" type="text" value="{{value}}" />
     </template>
 
     <script type="application/dart" src="freebase_searchwidget.dart">
