--- a/lib/components/freebase_searchwidget.html
+++ b/lib/components/freebase_searchwidget.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
+  
 <polymer-element name="freebase-searchwidget" attributes="options,value"> <!-- attributes="advanced exact filter key lang scoring spell flyout suggest_new css css_prefix show_id service_url service_path flyout_service_url flyout_service_path flyout_image_service_url flyout_image_service_path flyout_parent align status parent animate xhr_delay zIndex" -->
   <template>
     <input id="inputElement" type="text" value="{{value}}" />
   </template>
 
-  <script type="application/dart" src="freebase_searchwidget.dart">
-  </script>
+  <script type="application/dart" src="freebase_searchwidget.dart"></script>
 
 </polymer-element>
